# JuCode-Desktop

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: updater.md
scripts/: prepare-engine.mjs  prepare-engine.sh
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/.jucode/truncated-results/: read-082daf07d395a13f.json  read-381791e766bf2186.json  read-39e0afd9ba506a6d.json  read-48d0ef3bc1015484.json  read-50dbd1b826532fd2.json  read-5426d8af40170b33.json  read-564a25bbce84162f.json  read-73a827c9d6aa413a.json  read-7910c14f120622b6.json  read-bf0de86fa8d99164.json  read-ebdfcb9069057854.json  read-f61ad63d8ee4b563.json
src-tauri/capabilities/: default.json
src-tauri/src/: backend.rs  browser.rs  browser_init.js  capture.rs  claude_history.rs  installer.rs  lib.rs  shell_env.rs
src/lib/: AccountPanel.svelte  ApprovalCard.svelte  BackendIcon.svelte  BrowserPanel.svelte  ChangesPanel.svelte  CommandPalette.svelte  Composer.svelte  ContextRing.svelte  Dependencies.svelte  DiagnosticsPanel.svelte  EffortSlider.svelte  FilesPanel.svelte  GitPanel.svelte  GoalPanel.svelte  Indicator.svelte  Markdown.svelte  Marketplace.svelte  MessageList.svelte  OverviewPanel.svelte  ParallelTasks.svelte  PlanPanel.svelte  RateLimitBanner.svelte  RightDock.svelte  Settings.svelte  Setup.svelte  Sidebar.svelte  TaskDialog.svelte  TerminalPanel.svelte  ToolCard.svelte  TurnsPanel.svelte  UsageHeatmap.svelte  Vendor.svelte  app.css  (+28 more)
(+61 files in other folders)
